# EscapeRouters

./: .gitignore  README.md
doc/: RUsamp.csv  doc.tex  generals.csv
src/: CMakeLists.txt  readme.md  solution(20*30, 7).txt
src/AStar/: AstarRouter.cpp  AstarRouter.h
src/Common/: Board.cpp  Board.h  Router.cpp  Router.h  Solver.cpp  Solver.h  Timer.cpp  Timer.h  main.cpp  readme.md  solution 2.txt  solution 3.txt  solution 4.txt  solution2.txt  solution3.txt  solution5.txt  solutionQ.txt
src/Common/java/: Drawer.java  makefile
src/DivideConquer/: DCRouter.cpp  DCRouter.h  Quarter.cpp  Quarter.h  QuarterOdd.cpp  QuarterOdd.h
src/NetworkFlow/: NFRouter.cpp  NFRouter.h  main.cpp  readme.md  solution.txt
src/NetworkFlow/java/: Drawer.java
src/Rule/: RuleRouter.cpp  RuleRouter.h
testcase/DC/: solution10by10.txt  solution15by15.txt  solution20by20.txt  solution25by25.txt  solution35by35.txt  solution40by40.txt  solution45by45.txt  solution50by50.txt  solution55by55.txt  solution5by5.txt  solution60by60.txt  solution65by65.txt  stats10by10.csv  stats15by15.csv  stats20by20.csv  stats25by25.csv  stats30by30.csv  stats35by35.csv  stats40by40.csv  stats45by45.csv  stats50by50.csv  stats55by55.csv  stats5by5.csv  stats60by60.csv  stats65by65.csv  stats70by70.csv
testcase/NF/: solution10by10.txt  solution15by15.txt  solution20by20.txt  solution25by25.txt  solution30by30.txt  solution35by35.txt  solution40by40.txt  solution45by45.txt  solution50by50.txt  solution55by55.txt  stats10by10.csv  stats15by15.csv  stats20by20.csv  stats25by25.csv  stats30by30.csv  (+7 more)
